--- a/VoetbalToernooi/VoetbalToernooi.csproj
+++ b/VoetbalToernooi/VoetbalToernooi.csproj
@@ -56,6 +56,12 @@
       <DependentUpon>AddTeam.cs</DependentUpon>
     </Compile>
     <Compile Include="Competition.cs" />
+    <Compile Include="loginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="loginForm.Designer.cs">
+      <DependentUpon>loginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TeamViewer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
     <Compile Include="User.cs" />
     <EmbeddedResource Include="AddTeam.resx">
       <DependentUpon>AddTeam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="loginForm.resx">
+      <DependentUpon>loginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TeamViewer.resx">
       <DependentUpon>TeamViewer.cs</DependentUpon>
