--- a/VoetbalToernooi/VoetbalToernooi.csproj
+++ b/VoetbalToernooi/VoetbalToernooi.csproj
@@ -89,6 +89,12 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rankinglist.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="rankinglist.Designer.cs">
+      <DependentUpon>rankinglist.cs</DependentUpon>
+    </Compile>
     <Compile Include="Team.cs" />
     <Compile Include="User.cs" />
     <EmbeddedResource Include="AddTeam.resx">
